--- a/app/components/news/styles.css
+++ b/app/components/news/styles.css
@@ -1,33 +1,45 @@
+.article-container {
+    position: absolute;
+    width: 39%;
+    height: 94%;
+    left: 60%;
+    top: 3%;
+    overflow: hidden;
+    z-index: 1;   
+    background: transparent; 
+}
+
+.article-header {
+    font-family: "Times New Roman";
+    font-size: 40px;
+    text-shadow: 2px 2px 2px darkgray;
+}
 
 .articles {
-    position: absolute;
-    width: 40%;
-    height: 94%;
-    left: 59%;
-    top: 3%;
+    position: relative;
+    width: 96%;
+    height: 90%;
     overflow: auto;
     z-index: 1;
 }
 
-
-.articles_exit {
-    width: 100%;
-    height: 32px;
-    width: 100%;
-    font-size: 32px;
-    margin-bottom: 16px;
-    margin-right: 16px;
-    float: right;
+.articles-exit {
+    position: absolute;
+    top: 38px;
+    right: 32px;
+    height: 48px;
+    width: 48px;
+    font-size: 48px;
     color: darkgray;
     text-align: right;
     cursor: pointer;
 }
 
-.articles_exit:hover{
+.articles-exit:hover{
     color: black;
 }
 
-.article_author {
+.article-author {
     width: 90%;
     font-family: Open Sans;
     color: darkcyan;
@@ -38,8 +50,7 @@
     font-weight: 600;
 }
 
-
-.article_title {
+.article-title {
     width: 90%;
     font-family: Open Sans;
     font-weight: 800;
@@ -51,8 +62,7 @@
     margin-bottom: 24px;
 }
 
-
-.article_description {
+.article-description {
     width: 90%;
     font-family: Open Sans;
     color: black;
@@ -63,31 +73,28 @@
     font-stretch: ultra-condensed;
 }
 
-.article_source {
+.article-source {
     font-family: Open Sans;
     color: black;
     font-size: 14px;
     font-stretch: ultra-condensed;
-    width: 90%;
+    width: 95%;
     margin-bottom: 8px;
     text-align: right;
-
 }
 
 .article {
-    width: 80%;
+    width: 98%;
     height: auto;
     background: #fafaff;
     float:right;
-    margin-right: 10px;
+    margin-right: 2%;
     margin-bottom: 30px;
     box-shadow: 2px 2px 10px darkslategray;
-
 }
 
 .article img {
     width: 90%;
     margin-left: 5%;
     box-shadow: 0 0 4px black;
-
 }
