--- a/app/components/wikipedia/wikipedia.css
+++ b/app/components/wikipedia/wikipedia.css
@@ -1,55 +1,35 @@
 .wikipedia {
-    width: 100%;
-    height: auto;
+	width: 100%;
+	height: auto;
+	margin-top: 30px;
 }
 
-.wikipedia_search {
-    width: calc(100% - 130px);
-    height: 40px;
-    margin-top: 16px;
-    background: white;
-    float: left;
-    border:solid 1px gray;
-    padding-left: 8px;
-    padding-top: 6px;
+.wikipedia-result {
+	margin-top: 0px;
+	margin-bottom: 20px;
+	width: 95.3%;
+	height: auto;
+	box-shadow: 2px 2px 5px darkgray;
 }
 
-.wikipedia_result {
-    margin-top: 0px;
-    margin-bottom: 20px;
-    width: 95.3%;
-    height: auto;
-    box-shadow: 2px 2px 5px darkgray;
-}
-
-.iframe_style {
-    border: none;
-}
-
-
-.seperator {
-    height: 100px;
+.wikipedia-separator {
+	height: 100px;
 }
 
 .wikipedia-logo {
-    width: 80px;
-    height: 80px;
-    float: left;
-    text-align: center;
-    cursor: pointer;
-    margin-left: 20px;
-    margin-top: -20px;
-    background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Wikipedia_Logo_1.0.png/220px-Wikipedia_Logo_1.0.png');
-    background-size: 80px 100%;
-    border-radius: 50%;
-    opacity: 0.8;
+	width: 80px;
+	height: 80px;
+	float: left;
+	text-align: center;
+	cursor: pointer;
+	margin-left: 20px;
+	margin-top: -20px;
+	background-image: url('https://upload.wikimedia.org/wikipedia/commons/thumb/d/de/Wikipedia_Logo_1.0.png/220px-Wikipedia_Logo_1.0.png');
+	background-size: 80px 100%;
+	border-radius: 50%;
+	opacity: 0.8;
 }
 
-.wikipedia_logo:hover {
-    opacity: 1;
-}
-
-
-.mike {
-    display: none;
+.wikipedia-logo:hover {
+	opacity: 1;
 }
