--- a/app/components/playground/playground.css
+++ b/app/components/playground/playground.css
@@ -10,6 +10,10 @@
 	border-radius: 5px;
 	overflow: hidden;
 	background: #efefef;
+	font-weight: 800;
+	color: black;
+	caret-color: red;
+	border:solid 1px black;
 }
 
 .playground .box {
