--- a/app/components/playground/syntax.css
+++ b/app/components/playground/syntax.css
@@ -1,6 +1,6 @@
 /* Based on Sublime Text's Monokai theme */
 
-.cm-s-monokai.CodeMirror {background: #1B2B34; color: #CDD3DE;}
+.cm-s-monokai.CodeMirror {background: #1B2B34; color: rgb(128, 92, 92);}
 .cm-s-monokai div.CodeMirror-selected {background: #a7adba !important;}
 .cm-s-monokai.CodeMirror ::selection { background: #4f5b66; }
 .cm-s-monokai.CodeMirror ::-moz-selection { background: rgba(73, 72, 62, .99); }
@@ -8,7 +8,7 @@
 .cm-s-monokai .CodeMirror-guttermarker { color: white; }
 .cm-s-monokai .CodeMirror-guttermarker-subtle { color: #d0d0d0; }
 .cm-s-monokai .CodeMirror-linenumber {color: #d0d0d0;}
-.cm-s-monokai .CodeMirror-cursor {border-left: 1px solid #f8f8f0 !important;}
+.cm-s-monokai .CodeMirror-cursor {border-left: 1px solid black !important;}
 
 .cm-s-monokai span.cm-comment {color: #65737e;}
 .cm-s-monokai span.cm-atom {color: #F99157;}
@@ -18,9 +18,9 @@
 .cm-s-monokai span.cm-attribute {color: #C594C5;}
 .cm-s-monokai span.cm-keyword {color: #F2777A;}
 .cm-s-monokai span.cm-string {color: #99C794;}
-.cm-s-monokai span.cm-string-2 {color: #CDD3DE;}
+.cm-s-monokai span.cm-string-2 {color: darkgrey;}
 
-.cm-s-monokai span.cm-variable {color: #CDD3DE;}
+.cm-s-monokai span.cm-variable {color:darkgrey;}
 .cm-s-monokai span.cm-variable-2 {color: #9effff;}
 .cm-s-monokai span.cm-def {color: #fd971f;}
 .cm-s-monokai span.cm-bracket {color: #f8f8f2;}
