--- a/app/components/playground/codemirror.css
+++ b/app/components/playground/codemirror.css
@@ -6,12 +6,12 @@
     min-height: 0;
     max-height: 300px;
     font-family: monospace;
-    border:solid 2px black;
   }
 .CodeMirror-scroll {
     /* Set scrolling behaviour here */
     min-height: 0;
     max-height: 300px;
+    line-height: 20px;
     overflow: auto;
   }
   
