--- a/app/components/playground/playground.css
+++ b/app/components/playground/playground.css
@@ -1,11 +1,10 @@
 
 .component-documentation {
 	margin: 0 auto;
-	max-width: 800px;
+	max-width: 1200px;
 }
 
 .playground {
-	margin: 10px auto;
 	box-shadow: 0px 0px 5px rgba(0,0,0,0.25);
 	border-radius: 5px;
 	overflow: hidden;
@@ -13,8 +12,22 @@
 	font-weight: 800;
 	color: black;
 	caret-color: red;
-	border:solid 1px black;
+	margin-bottom: 30px;
+	cursor: pointer;
 }
+
+.playground-editable {
+	background: rgb(30,30,30);
+	color: gainsboro;
+	text-align: center;
+	font-size: 22px;
+	letter-spacing: 5px;
+}
+
+.playground-editable:hover {
+	color: white;
+}
+
 
 .playground .box {
 	background: #efefef;
