--- a/components/proportions-survey.html
+++ b/components/proportions-survey.html
@@ -279,6 +279,19 @@
             
         </li>
     
+        <li class="chapter " data-level="1.4.2.6" data-path="voice-input.html">
+            
+                <a href="voice-input.html">
+            
+                    
+                    Voice Input
+            
+                </a>
+            
+
+            
+        </li>
+    
 
             </ul>
             
@@ -336,7 +349,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.7" data-path="grid.html">
+        <li class="chapter " data-level="1.4.7" data-path="gate.html">
+            
+                <a href="gate.html">
+            
+                    
+                    Gate
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.8" data-path="grid.html">
             
                 <a href="grid.html">
             
@@ -349,7 +375,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.8" data-path="lesson-submit.html">
+        <li class="chapter " data-level="1.4.9" data-path="js-shell.html">
+            
+                <a href="js-shell.html">
+            
+                    
+                    JSShell
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.10" data-path="lesson-submit.html">
             
                 <a href="lesson-submit.html">
             
@@ -362,7 +401,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.9" data-path="match-list-question.html">
+        <li class="chapter " data-level="1.4.11" data-path="match-list-question.html">
             
                 <a href="match-list-question.html">
             
@@ -375,7 +414,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.10" data-path="multiple-choice-question.html">
+        <li class="chapter " data-level="1.4.12" data-path="multiple-choice-question.html">
             
                 <a href="multiple-choice-question.html">
             
@@ -388,7 +427,20 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.11" data-path="pages.html">
+        <li class="chapter " data-level="1.4.13" data-path="news.html">
+            
+                <a href="news.html">
+            
+                    
+                    News
+            
+                </a>
+            
+
+            
+        </li>
+    
+        <li class="chapter " data-level="1.4.14" data-path="pages.html">
             
                 <a href="pages.html">
             
@@ -401,7 +453,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.12" data-path="plots.html">
+        <li class="chapter " data-level="1.4.15" data-path="plots.html">
             
                 <a href="plots.html">
             
@@ -415,7 +467,7 @@
             <ul class="articles">
                 
     
-        <li class="chapter " data-level="1.4.12.1" data-path="density-plot.html">
+        <li class="chapter " data-level="1.4.15.1" data-path="density-plot.html">
             
                 <a href="density-plot.html">
             
@@ -428,7 +480,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.12.2" data-path="r-plot.html">
+        <li class="chapter " data-level="1.4.15.2" data-path="r-plot.html">
             
                 <a href="r-plot.html">
             
@@ -446,7 +498,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.13" data-path="proportions-survey.html">
+        <li class="chapter active" data-level="1.4.16" data-path="proportions-survey.html">
             
                 <a href="proportions-survey.html">
             
@@ -459,7 +511,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.14" data-path="r-help.html">
+        <li class="chapter " data-level="1.4.17" data-path="r-help.html">
             
                 <a href="r-help.html">
             
@@ -472,7 +524,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.15" data-path="r-output.html">
+        <li class="chapter " data-level="1.4.18" data-path="r-output.html">
             
                 <a href="r-output.html">
             
@@ -485,7 +537,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.16" data-path="r-shell.html">
+        <li class="chapter " data-level="1.4.19" data-path="r-shell.html">
             
                 <a href="r-shell.html">
             
@@ -498,7 +550,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.17" data-path="r-table.html">
+        <li class="chapter " data-level="1.4.20" data-path="r-table.html">
             
                 <a href="r-table.html">
             
@@ -511,7 +563,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.18" data-path="slider.html">
+        <li class="chapter " data-level="1.4.21" data-path="slider.html">
             
                 <a href="slider.html">
             
@@ -524,7 +576,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.19" data-path="switch.html">
+        <li class="chapter " data-level="1.4.22" data-path="switch.html">
             
                 <a href="switch.html">
             
@@ -537,7 +589,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.20" data-path="text-area.html">
+        <li class="chapter " data-level="1.4.23" data-path="text-area.html">
             
                 <a href="text-area.html">
             
@@ -550,7 +602,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.21" data-path="text.html">
+        <li class="chapter " data-level="1.4.24" data-path="text.html">
             
                 <a href="text.html">
             
@@ -563,7 +615,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.22" data-path="timer.html">
+        <li class="chapter " data-level="1.4.25" data-path="timer.html">
             
                 <a href="timer.html">
             
@@ -576,7 +628,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.23" data-path="latex.html">
+        <li class="chapter " data-level="1.4.26" data-path="latex.html">
             
                 <a href="latex.html">
             
@@ -589,7 +641,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.24" data-path="video-player.html">
+        <li class="chapter " data-level="1.4.27" data-path="video-player.html">
             
                 <a href="video-player.html">
             
@@ -602,7 +654,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.25" data-path="wikipedia.html">
+        <li class="chapter " data-level="1.4.28" data-path="wikipedia.html">
             
                 <a href="wikipedia.html">
             
@@ -750,7 +802,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"Proportions Survey","level":"1.4.13","depth":2,"next":{"title":"R Help","level":"1.4.14","depth":2,"path":"components/r-help.md","ref":"components/r-help.md","articles":[]},"previous":{"title":"R Plot","level":"1.4.12.2","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/proportions-survey.md","mtime":"2017-12-27T15:52:23.528Z","type":"markdown"},"gitbook":{"version":"3.2.3","time":"2017-12-28T10:34:28.934Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Proportions Survey","level":"1.4.16","depth":2,"next":{"title":"R Help","level":"1.4.17","depth":2,"path":"components/r-help.md","ref":"components/r-help.md","articles":[]},"previous":{"title":"R Plot","level":"1.4.15.2","depth":3,"path":"components/r-plot.md","ref":"components/r-plot.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/proportions-survey.md","mtime":"2017-12-27T15:52:23.528Z","type":"markdown"},"gitbook":{"version":"3.2.3","time":"2017-12-28T10:45:09.790Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
