--- a/components/gate.html
+++ b/components/gate.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <title>R Output · ISLE Editor Documentation</title>
+        <title>Gate · ISLE Editor Documentation</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="">
         <meta name="generator" content="GitBook 3.2.3">
@@ -57,10 +57,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="r-shell.html" />
+    <link rel="next" href="grid.html" />
     
     
-    <link rel="prev" href="r-help.html" />
+    <link rel="prev" href="free-text-question.html" />
     
 
     </head>
@@ -349,7 +349,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.7" data-path="gate.html">
+        <li class="chapter active" data-level="1.4.7" data-path="gate.html">
             
                 <a href="gate.html">
             
@@ -524,7 +524,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.18" data-path="r-output.html">
+        <li class="chapter " data-level="1.4.18" data-path="r-output.html">
             
                 <a href="r-output.html">
             
@@ -715,7 +715,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href=".." >R Output</a>
+        <a href=".." >Gate</a>
     </h1>
 </div>
 
@@ -730,16 +730,24 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="r-output">R Output</h1>
-<p>Component for rendering R output inside an ISLE lesson.</p>
+                                <h1 id="gate">Gate</h1>
+<p>An ISLE component that allows to display its children only to reserved audiences.</p>
 <h4 id="example">Example:</h4>
-<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>ROutput code<span class="token operator">=</span><span class="token punctuation">{</span><span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>code<span class="token punctuation">}</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
+<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>Gate 
+    banner<span class="token operator">=</span><span class="token punctuation">{</span><span class="token string">&quot;&lt;div&gt;You have to be logged in to see the image&lt;/div&gt;&quot;</span><span class="token punctuation">}</span>
+    user 
+<span class="token operator">&gt;</span>
+    <span class="token operator">&lt;</span>h1<span class="token operator">&gt;</span>For teachers only<span class="token operator">&lt;</span><span class="token operator">/</span>div<span class="token operator">&gt;</span>
+<span class="token operator">&lt;</span><span class="token operator">/</span>Gate<span class="token operator">&gt;</span>
 </code></pre>
+<p><a href="https://isle.heinz.cmu.edu/components/gate/" target="_blank">Open interactive preview</a></p>
 <h4 id="options">Options:</h4>
 <ul>
-<li><strong>code</strong>: R code used to evaluate. Default: <code>&apos;&apos;</code>.</li>
-<li><strong>libraries</strong>: <code>Array</code> of R libraries that should be loaded automatically when the input <code>code</code> is executed. Default: <code>[]</code>.</li>
-<li><strong>prependCode</strong>: <code>string</code> or an <code>Array</code> of R code to be prepended to the code stored in <code>code</code> when evaluating. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>anonymous</strong>: when set the gated content is displayed to anybody</li>
+<li><strong>user</strong>: when set the gated content is displayed to subscribed users.</li>
+<li><strong>enrolled</strong>: when set the gated content is displayed to the students enrolled in the course</li>
+<li><strong>owner</strong>: when set the gated content is displayed to the owner of the course (usually the instructor)</li>
+<li><strong>banner</strong>: a message which is visible to the visitors lacking the gate privilege</li>
 </ul>
 
                                 
@@ -768,12 +776,12 @@
 
             
                 
-                <a href="r-help.html" class="navigation navigation-prev " aria-label="Previous page: R Help">
+                <a href="free-text-question.html" class="navigation navigation-prev " aria-label="Previous page: Free Text Question">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="r-shell.html" class="navigation navigation-next " aria-label="Next page: R Shell">
+                <a href="grid.html" class="navigation navigation-next " aria-label="Next page: Grid">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -784,7 +792,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"R Output","level":"1.4.18","depth":2,"next":{"title":"R Shell","level":"1.4.19","depth":2,"path":"components/r-shell.md","ref":"components/r-shell.md","articles":[]},"previous":{"title":"R Help","level":"1.4.17","depth":2,"path":"components/r-help.md","ref":"components/r-help.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-output.md","mtime":"2017-12-20T19:26:26.596Z","type":"markdown"},"gitbook":{"version":"3.2.3","time":"2017-12-28T10:45:09.790Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"Gate","level":"1.4.7","depth":2,"next":{"title":"Grid","level":"1.4.8","depth":2,"path":"components/grid.md","ref":"components/grid.md","articles":[]},"previous":{"title":"Free Text Question","level":"1.4.6","depth":2,"path":"components/free-text-question.md","ref":"components/free-text-question.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/gate.md","mtime":"2017-12-28T10:31:58.075Z","type":"markdown"},"gitbook":{"version":"3.2.3","time":"2017-12-28T10:45:09.790Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
