--- a/components/news.html
+++ b/components/news.html
@@ -4,7 +4,7 @@
     <head>
         <meta charset="UTF-8">
         <meta content="text/html; charset=utf-8" http-equiv="Content-Type">
-        <title>R Output · ISLE Editor Documentation</title>
+        <title>News · ISLE Editor Documentation</title>
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="description" content="">
         <meta name="generator" content="GitBook 3.2.3">
@@ -57,10 +57,10 @@
     <link rel="shortcut icon" href="../gitbook/images/favicon.ico" type="image/x-icon">
 
     
-    <link rel="next" href="r-shell.html" />
+    <link rel="next" href="pages.html" />
     
     
-    <link rel="prev" href="r-help.html" />
+    <link rel="prev" href="multiple-choice-question.html" />
     
 
     </head>
@@ -427,7 +427,7 @@
             
         </li>
     
-        <li class="chapter " data-level="1.4.13" data-path="news.html">
+        <li class="chapter active" data-level="1.4.13" data-path="news.html">
             
                 <a href="news.html">
             
@@ -524,7 +524,7 @@
             
         </li>
     
-        <li class="chapter active" data-level="1.4.18" data-path="r-output.html">
+        <li class="chapter " data-level="1.4.18" data-path="r-output.html">
             
                 <a href="r-output.html">
             
@@ -715,7 +715,7 @@
     <!-- Title -->
     <h1>
         <i class="fa fa-circle-o-notch fa-spin"></i>
-        <a href=".." >R Output</a>
+        <a href=".." >News</a>
     </h1>
 </div>
 
@@ -730,16 +730,21 @@
     
                                 <section class="normal markdown-section">
                                 
-                                <h1 id="r-output">R Output</h1>
-<p>Component for rendering R output inside an ISLE lesson.</p>
+                                <h1 id="news">News</h1>
+<p>The <strong>News</strong> component scans the public <strong>News API</strong> (consisting of 71 international newspapers) and displays the latest 10 articles of the given newspaper. There are two ways to enter a source: one by typing into the search field and submitting via the ENTER button, the second via voice.</p>
 <h4 id="example">Example:</h4>
-<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>ROutput code<span class="token operator">=</span><span class="token punctuation">{</span><span class="token keyword">this</span><span class="token punctuation">.</span>state<span class="token punctuation">.</span>code<span class="token punctuation">}</span> <span class="token operator">/</span><span class="token operator">&gt;</span>
+<pre class="language-"><code class="lang-js"><span class="token operator">&lt;</span>News
+    onArticles<span class="token operator">=</span><span class="token punctuation">{</span><span class="token punctuation">(</span>data<span class="token punctuation">)</span> <span class="token operator">=</span><span class="token operator">&gt;</span> <span class="token punctuation">{</span>
+        console<span class="token punctuation">.</span><span class="token function">log</span><span class="token punctuation">(</span> data <span class="token punctuation">)</span><span class="token punctuation">;</span>
+    <span class="token punctuation">}</span> <span class="token punctuation">}</span>
+<span class="token operator">/</span><span class="token operator">&gt;</span>
 </code></pre>
+<p> <a href="https://isle.heinz.cmu.edu/components/news/" target="_blank">Open interactive preview</a></p>
 <h4 id="options">Options:</h4>
 <ul>
-<li><strong>code</strong>: R code used to evaluate. Default: <code>&apos;&apos;</code>.</li>
-<li><strong>libraries</strong>: <code>Array</code> of R libraries that should be loaded automatically when the input <code>code</code> is executed. Default: <code>[]</code>.</li>
-<li><strong>prependCode</strong>: <code>string</code> or an <code>Array</code> of R code to be prepended to the code stored in <code>code</code> when evaluating. Default: <code>&apos;&apos;</code>.</li>
+<li><strong>invisible</strong>: <code>boolean</code> indicating whether to render the component. To set it to invisible makes only sense when the component is triggered by voice recognition.</li>
+<li><strong>language</strong>: specifies the given language. <strong>us-EN</strong>, <strong>de-DE</strong>, and <strong>fr-FR</strong> are supported (English, German, French).</li>
+<li><strong>onArticles</strong>: a callback <code>function</code> that receives the found articles in JSON format.</li>
 </ul>
 
                                 
@@ -768,12 +773,12 @@
 
             
                 
-                <a href="r-help.html" class="navigation navigation-prev " aria-label="Previous page: R Help">
+                <a href="multiple-choice-question.html" class="navigation navigation-prev " aria-label="Previous page: Multiple Choice Question">
                     <i class="fa fa-angle-left"></i>
                 </a>
                 
                 
-                <a href="r-shell.html" class="navigation navigation-next " aria-label="Next page: R Shell">
+                <a href="pages.html" class="navigation navigation-next " aria-label="Next page: Pages">
                     <i class="fa fa-angle-right"></i>
                 </a>
                 
@@ -784,7 +789,7 @@
     <script>
         var gitbook = gitbook || [];
         gitbook.push(function() {
-            gitbook.page.hasChanged({"page":{"title":"R Output","level":"1.4.18","depth":2,"next":{"title":"R Shell","level":"1.4.19","depth":2,"path":"components/r-shell.md","ref":"components/r-shell.md","articles":[]},"previous":{"title":"R Help","level":"1.4.17","depth":2,"path":"components/r-help.md","ref":"components/r-help.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/r-output.md","mtime":"2017-12-20T19:26:26.596Z","type":"markdown"},"gitbook":{"version":"3.2.3","time":"2017-12-28T10:45:09.790Z"},"basePath":"..","book":{"language":""}});
+            gitbook.page.hasChanged({"page":{"title":"News","level":"1.4.13","depth":2,"next":{"title":"Pages","level":"1.4.14","depth":2,"path":"components/pages.md","ref":"components/pages.md","articles":[]},"previous":{"title":"Multiple Choice Question","level":"1.4.12","depth":2,"path":"components/multiple-choice-question.md","ref":"components/multiple-choice-question.md","articles":[]},"dir":"ltr"},"config":{"plugins":["edit-link","prism","-highlight"],"root":"./docs","styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"pluginsConfig":{"fontsettings":{"theme":"white","family":"sans","size":3},"edit-link":{"label":"Edit This Page","base":"https://github.com/Planeshifter/isle-editor/edit/master/docs"},"prism":{},"search":{},"lunr":{"maxIndexSize":1000000,"ignoreSpecialCharacters":false},"sharing":{"facebook":true,"twitter":true,"google":false,"weibo":false,"instapaper":false,"vk":false,"all":["facebook","google","twitter","weibo","instapaper"]},"theme-default":{"styles":{"website":"styles/website.css","pdf":"styles/pdf.css","epub":"styles/epub.css","mobi":"styles/mobi.css","ebook":"styles/ebook.css","print":"styles/print.css"},"showLevel":false}},"theme":"default","author":"Philipp Burckhardt","pdf":{"pageNumbers":true,"fontSize":12,"fontFamily":"Arial","paperSize":"a4","chapterMark":"pagebreak","pageBreaksBefore":"/","margin":{"right":62,"left":62,"top":56,"bottom":56}},"structure":{"langs":"LANGS.md","readme":"README.md","glossary":"GLOSSARY.md","summary":"SUMMARY.md"},"variables":{},"title":"ISLE Editor Documentation","gitbook":"*","description":"Documentation of the ISLE editor, a desktop application for authoring lessons for the Interactive Statistics Learning Environment (ISLE)"},"file":{"path":"components/news.md","mtime":"2017-12-27T17:49:42.791Z","type":"markdown"},"gitbook":{"version":"3.2.3","time":"2017-12-28T10:45:09.790Z"},"basePath":"..","book":{"language":""}});
         });
     </script>
 </div>
